--- a/ServerGUI/UserService/UserService.csproj
+++ b/ServerGUI/UserService/UserService.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dummy\UserFactory.cs" />
     <Compile Include="IUserService.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
