add factory tests

--- a/ServerGUI/ServerGUI/ServerGUI.csproj
+++ b/ServerGUI/ServerGUI/ServerGUI.csproj
@@ -82,5 +82,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\UserService\UserService.csproj">
+      <Project>{1fc0d8f9-990a-401e-86bb-bd8c4523fbdf}</Project>
+      <Name>UserService</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
