--- a/ServerGUI/UserServiceTests/UserServiceTests.csproj
+++ b/ServerGUI/UserServiceTests/UserServiceTests.csproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <Compile Include="Dummy\UserFactoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
