--- a/ServerGUI/DbHandler/DbHandler.csproj
+++ b/ServerGUI/DbHandler/DbHandler.csproj
@@ -49,7 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DbFactory.cs" />
     <Compile Include="DbHandler.cs" />
+    <Compile Include="IDbHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
