--- a/ServerGUI/UserServiceCore/UserServiceCore.csproj
+++ b/ServerGUI/UserServiceCore/UserServiceCore.csproj
@@ -11,10 +11,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
     <PackageReference Include="Npgsql" Version="3.2.7" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.1" />
@@ -34,6 +30,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\StorageHandler\StorageHandler.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\css\" />
+    <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
 </Project>
