--- a/BikeItemService/BikeItemService/appsettings.json
+++ b/BikeItemService/BikeItemService/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "BikeItemDb": "user ID=postgres;Password=testpassword;Server=localhost;Port=5432;Database=BikeItem;Integrated Security=true;Pooling=true;"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
