--- a/PaymentService/API/appsettings.json
+++ b/PaymentService/API/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "ConnString":  "User ID =postgres;Password=142536789;Server=localhost;Port=5432;Database=Payments;Integrated Security=true;Pooling=true;"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
